v1.4.0 change validation for lastName, add deletePatientById, modify certain methods and tests, rename ErrorMessage to ResponseMessage